--- a/index.html
+++ b/index.html
@@ -26,16 +26,19 @@
             <input type="checkbox" />
             <label></label>
             <h4>Complete Javascript Online 1</h4>
+            <img src="images/icon-cross.svg" alt="icon-cross">
           </li>
           <li>
             <input type="checkbox" />
             <label></label>
             <h4>Complete Javascript Online 2</h4>
+            <img src="images/icon-cross.svg" alt="icon-cross">
           </li>
           <li>
             <input type="checkbox" />
             <label></label>
             <h4>Complete Javascript Online 3</h4>
+            <img src="images/icon-cross.svg" alt="icon-cross">
           </li>
         </ul>
         <div class="todo-footer">
