--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ToDo App Main</title>
     <link rel="stylesheet" href="styles.css" />
     <script src="index.js" defer></script>
-  </head>
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
   <body>
     <div class="bg-img"></div>
     <div class="todo-container">
@@ -25,19 +25,7 @@
           <li>
             <input type="checkbox" />
             <label></label>
-            <h4>Complete Javascript Online 1</h4>
-            <img src="images/icon-cross.svg" alt="icon-cross">
-          </li>
-          <li>
-            <input type="checkbox" />
-            <label></label>
-            <h4>Complete Javascript Online 2</h4>
-            <img src="images/icon-cross.svg" alt="icon-cross">
-          </li>
-          <li>
-            <input type="checkbox" />
-            <label></label>
-            <h4>Complete Javascript Online 3</h4>
+            <h4>Samuel adekolu is Awesome(Samixx Yasuke)</h4>
             <img src="images/icon-cross.svg" alt="icon-cross">
           </li>
         </ul>
