--- a/index.html
+++ b/index.html
@@ -22,21 +22,15 @@
       </div>
       <div class="todo-list-content">
         <ul>
-          <li>
-            <input type="checkbox" />
-            <label></label>
-            <h4>Samuel adekolu is Awesome(Samixx Yasuke)</h4>
-            <img src="images/icon-cross.svg" alt="icon-cross">
-          </li>
         </ul>
         <div class="todo-footer">
-          <p>5 items left</p>
+          <a href="#">5 items left</a>
           <div class="todo-footer-container">
-            <p>All</p>
-            <p>Active</p>
-            <p>Completed</p>
+            <a href="#">All</a>
+            <a href="#">Active</a>
+            <a href="#">Completed</a>
           </div>
-          <p>Clear Completed</p>
+          <a href="#">Clear Completed</a>
         </div>
       </div>
     </div>
