--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#">Active</a>
             <a href="#">Completed</a>
           </div>
-          <a href="#">Clear Completed</a>
+          <a href="#" class="clear-completed">Clear Completed</a>
         </div>
       </div>
     </div>
